# drf-api-deploy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
deploy_project/: asgi.py  settings.py  urls.py  wsgi.py
