[tool.poetry]
name = "drf_api_deploy"
version = "0.1.0"
description = ""
authors = ["Yonatan Palagashvili <yonimotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^4.4.1"
docker-compose = "^1.27.4"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
